# Tester

./: CMakeLists.txt
Basics/: CMakeLists.txt  casts.h  exceptions.h  test.cpp  tricks.h
Boost/: BGraph.h  CMakeLists.txt  Container.h  Dependency.h  LockFree.h  Serialization.h  Tuple.h  container_bmark.h  test.cpp
BoostNW/: AsyncParallel.h  CMakeLists.txt  Common.h  SyncIterative.h  SyncParallel.h  SyncTCPClient.h  linux.h  optimizations.h  select.h  sharedMem.h  test.cpp
Codility/: BalancedParentheses.h  BinaryCount.h  CMakeLists.txt  CRecipies.h  CUtils.h  MorseDecoder.h  Multiply.h  NextNumber.h  Problems.h  StackMachine.h  Ticket.h  TriangleCount.h  Utils.h  aligned_malloc.h  business.h  darianCalender.h  maxSum.h  puzzles.h  robot.h  sql.h  templateTest.h  test.cpp
Containers/: Algos.h  CMakeLists.txt  Maps.h  Vector.h  allocator.h  cast.h  googleMaps.h  test.cpp
IO/: CMakeLists.txt  CSVRW.h  WordCount.h  test.cpp
Patterns/: CMakeLists.txt  Command.h  Composite.h  Factory.h  Observer.h  Pimpl.h  Singleton.h  Strategy.h  Visitor.h  flyweight.h  test.cpp
Utils/: CMakeLists.txt  MyString.h  SharedPointer.h  cFunc.h  conversion.h  test.cpp
algorithms/: CMakeLists.txt  GraphBFS.h  test.cpp
books/: links.txt
datastructures/: AVL.h  BTree.h  BinaryTree.h  CMakeLists.txt  LinkedList.h  MemoryBlock.h  MyGraph.h  MyHashTable.h  MyLinkedList.h  MyList.h  MySharedPointer.h  MyString.h  MyUniquePtr.h  MyVector.h  MyWeakPointer.h  QSort.h  RBTree.h  TopologicalSort.h  c_linked_list.h  fixed_array.h  smartPointers.h  sort.h  test.cpp
main/: CMakeLists.txt  (+1 more)
(+85 files in other folders)
